--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,3 +34,19 @@ jobs:
           docker tag $ECR_REGISTRY/$ECR_REPOSITORY:latest $ECR_REGISTRY/$ECR_REPOSITORY:${IMAGE_TAG::7}
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:${IMAGE_TAG::7}
+
+      # Install Terraform CLI
+      - name: Install Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: 1.6.6
+
+      # Terraform Init
+      - name: Terraform Init
+        run: terraform init
+
+      # Terraform Apply with image_tag variable
+      - name: Terraform Apply (Update ECS Service)
+        env:
+          IMAGE_TAG: ${{ github.sha }}
+        run: terraform apply -auto-approve -var="image_tag=${IMAGE_TAG::7}"
