--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,17 +36,17 @@ jobs:
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:${IMAGE_TAG::7}
 
       # Install Terraform CLI
-      - name: Install Terraform
-        uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_version: 1.6.6
+      # - name: Install Terraform
+      #   uses: hashicorp/setup-terraform@v3
+      #   with:
+      #     terraform_version: 1.6.6
 
-      # Terraform Init
-      - name: Terraform Init
-        run: terraform init
+      # # Terraform Init
+      # - name: Terraform Init
+      #   run: terraform init
 
-      # Terraform Apply with image_tag variable
-      - name: Terraform Apply (Update ECS Service)
-        env:
-          IMAGE_TAG: ${{ github.sha }}
-        run: terraform apply -auto-approve -var="image_tag=$(echo $GITHUB_SHA | cut -c1-7)"
+      # # Terraform Apply with image_tag variable
+      # - name: Terraform Apply (Update ECS Service)
+      #   env:
+      #     IMAGE_TAG: ${{ github.sha }}
+      #   run: terraform apply -auto-approve -var="image_tag=$(echo $GITHUB_SHA | cut -c1-7)"
