--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,6 +35,19 @@ jobs:
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:${IMAGE_TAG::7}
 
+        # ---- Promtail Build & Push ----
+      - name: Build, tag, and push Promtail image
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR_REPOSITORY_PROMTAIL: ${{ secrets.ECR_REPOSITORY_PROMTAIL }}
+          IMAGE_TAG: ${{ github.sha }}
+        run: |
+          docker build --platform linux/amd64 -t $ECR_REGISTRY/$ECR_REPOSITORY_PROMTAIL:latest -f promtail/promdocs .
+          docker tag $ECR_REGISTRY/$ECR_REPOSITORY_PROMTAIL:latest $ECR_REGISTRY/$ECR_REPOSITORY_PROMTAIL:${IMAGE_TAG::7}
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY_PROMTAIL:latest
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY_PROMTAIL:${IMAGE_TAG::7}
+
+
       # Install Terraform CLI
       # - name: Install Terraform
       #   uses: hashicorp/setup-terraform@v3
