--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,10 +42,10 @@ jobs:
           ECR_REPOSITORY_PROMTAIL: ${{ secrets.ECR_REPOSITORY_PROMTAIL }}
           IMAGE_TAG: ${{ github.sha }}
         run: |
-          docker build --platform linux/amd64 -t $ECR_REGISTRY/$ECR_REPOSITORY_PROMTAIL:latest -f promtail/promdocs .
-          docker tag $ECR_REGISTRY/$ECR_REPOSITORY_PROMTAIL:latest $ECR_REGISTRY/$ECR_REPOSITORY_PROMTAIL:${IMAGE_TAG::7}
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY_PROMTAIL:latest
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY_PROMTAIL:${IMAGE_TAG::7}
+          docker build --platform linux/amd64 -t $ECR_REGISTRY/promtail:latest -f promtail/promdocs .
+          docker tag $ECR_REGISTRY/promtail:latest $ECR_REGISTRY/$ECR_REPOSITORY_PROMTAIL:${IMAGE_TAG::7}
+          docker push $ECR_REGISTRY/$promtail:latest
+          docker push $ECR_REGISTRY/promtail:${IMAGE_TAG::7}
 
 
       # Install Terraform CLI
