--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,13 +37,13 @@ jobs:
 
        
       - name: Build, tag, and push Promtail image
-        working-directory: ${{ github.workspace }}
+        #working-directory: ${{ github.workspace }}
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
           IMAGE_TAG: ${{ github.sha }}
         run: |
-          docker build --platform linux/amd64 -t $ECR_REGISTRY/promtail:latest -f promtail/prom-Dockerfile .
+          docker build --platform linux/amd64 -t $ECR_REGISTRY/promtail:latest -f prom-Dockerfile .
           docker tag $ECR_REGISTRY/promtail:latest $ECR_REGISTRY/promtail:${IMAGE_TAG::7}
           docker push $ECR_REGISTRY/promtail:latest
           docker push $ECR_REGISTRY/promtail:${IMAGE_TAG::7}
