--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,7 +43,7 @@ jobs:
           ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
           IMAGE_TAG: ${{ github.sha }}
         run: |
-          docker build --platform linux/amd64 -t $ECR_REGISTRY/promtail:latest -f prom-Dockerfile .
+          docker build --platform linux/amd64 -t $ECR_REGISTRY/promtail:latest -f prom-Dockerfile 
           docker tag $ECR_REGISTRY/promtail:latest $ECR_REGISTRY/promtail:${IMAGE_TAG::7}
           docker push $ECR_REGISTRY/promtail:latest
           docker push $ECR_REGISTRY/promtail:${IMAGE_TAG::7}
