--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,31 +24,19 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
-      # - name: Build, tag, and push image to Amazon ECR
-      #   env:
-      #     ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-      #     ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
-      #     IMAGE_TAG: ${{ github.sha }}
-      #   run: |
-      #     docker build  --platform linux/amd64 -t $ECR_REGISTRY/$ECR_REPOSITORY:latest .
-      #     docker tag $ECR_REGISTRY/$ECR_REPOSITORY:latest $ECR_REGISTRY/$ECR_REPOSITORY:${IMAGE_TAG::7}
-      #     docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
-      #     docker push $ECR_REGISTRY/$ECR_REPOSITORY:${IMAGE_TAG::7}
-
-       
-      - name: Build, tag, and push Promtail image
-        #working-directory: ${{ github.workspace }}
+      - name: Build, tag, and push image to Amazon ECR
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
           IMAGE_TAG: ${{ github.sha }}
         run: |
-          docker build --platform linux/amd64 -t $ECR_REGISTRY/promtail:latest -f prom-Dockerfile 
-          docker tag $ECR_REGISTRY/promtail:latest $ECR_REGISTRY/promtail:${IMAGE_TAG::7}
-          docker push $ECR_REGISTRY/promtail:latest
-          docker push $ECR_REGISTRY/promtail:${IMAGE_TAG::7}
+          docker build  --platform linux/amd64 -t $ECR_REGISTRY/$ECR_REPOSITORY:latest .
+          docker tag $ECR_REGISTRY/$ECR_REPOSITORY:latest $ECR_REGISTRY/$ECR_REPOSITORY:${IMAGE_TAG::7}
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:${IMAGE_TAG::7}
 
-
+       
+     
       # Install Terraform CLI
       # - name: Install Terraform
       #   uses: hashicorp/setup-terraform@v3
