--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,25 +37,25 @@ jobs:
 
 
 
-      # - name: Update ECS service
-      #   run: |
-      #     IMAGE_TAG=$(echo $GITHUB_SHA | cut -c1-7)
-      #     CLUSTER_NAME=my-flask-app-cluster
-      #     SERVICE_NAME=my-flask-app-service
-      #     TASK_FAMILY=my-flask-app-task
+      - name: Update ECS service
+        run: |
+          IMAGE_TAG=$(echo $GITHUB_SHA | cut -c1-7)
+          CLUSTER_NAME=my-flask-app-cluster
+          SERVICE_NAME=my-flask-app-service
+          TASK_FAMILY=my-flask-app-task
 
-      #     # Get current task definition JSON
-      #     TASK_DEF=$(aws ecs describe-task-definition --task-definition $TASK_FAMILY)
+          # Get current task definition JSON
+          TASK_DEF=$(aws ecs describe-task-definition --task-definition $TASK_FAMILY)
 
-      #     # Create new task definition with updated image
-      #     NEW_TASK_DEF=$(echo $TASK_DEF | \
-      #       jq --arg IMAGE "dockerhubusername/myflaskapp:$IMAGE_TAG" \
-      #       '.taskDefinition | .containerDefinitions[0].image=$IMAGE | {family: .family, containerDefinitions: .containerDefinitions, networkMode: .networkMode, requiresCompatibilities: .requiresCompatibilities, cpu: .cpu, memory: .memory, executionRoleArn: .executionRoleArn, taskRoleArn: .taskRoleArn}')
+          # Create new task definition with updated image
+          NEW_TASK_DEF=$(echo $TASK_DEF | \
+            jq --arg IMAGE "dockerhubusername/myflaskapp:$IMAGE_TAG" \
+            '.taskDefinition | .containerDefinitions[0].image=$IMAGE | {family: .family, containerDefinitions: .containerDefinitions, networkMode: .networkMode, requiresCompatibilities: .requiresCompatibilities, cpu: .cpu, memory: .memory, executionRoleArn: .executionRoleArn, taskRoleArn: .taskRoleArn}')
 
-      #     echo "$NEW_TASK_DEF" > new-task-def.json
+          echo "$NEW_TASK_DEF" > new-task-def.json
 
-      #     # Register new task definition
-      #     REVISION=$(aws ecs register-task-definition --cli-input-json file://new-task-def.json --query 'taskDefinition.revision' --output text)
+          # Register new task definition
+          REVISION=$(aws ecs register-task-definition --cli-input-json file://new-task-def.json --query 'taskDefinition.revision' --output text)
 
-      #     # Update ECS service to use new revision
-      #     aws ecs update-service --cluster $CLUSTER_NAME --service $SERVICE_NAME --task-definition $TASK_FAMILY:$REVISION
+          # Update ECS service to use new revision
+          aws ecs update-service --cluster $CLUSTER_NAME --service $SERVICE_NAME --task-definition $TASK_FAMILY:$REVISION
