--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,40 +24,43 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
-      - name: Build, tag, and push image to Amazon ECR
-        env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
-          IMAGE_TAG: ${{ github.sha }}
-        run: |
-          docker build --platform linux/amd64 -t $ECR_REGISTRY/$ECR_REPOSITORY:latest .
-          docker tag $ECR_REGISTRY/$ECR_REPOSITORY:latest $ECR_REGISTRY/$ECR_REPOSITORY:${IMAGE_TAG::7}
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:${IMAGE_TAG::7}
+      # - name: Build, tag, and push image to Amazon ECR
+      #   env:
+      #     ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+      #     ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
+      #     IMAGE_TAG: ${{ github.sha }}
+      #   run: |
+      #     docker build --platform linux/amd64 -t $ECR_REGISTRY/$ECR_REPOSITORY:latest .
+      #     docker tag $ECR_REGISTRY/$ECR_REPOSITORY:latest $ECR_REGISTRY/$ECR_REPOSITORY:${IMAGE_TAG::7}
+      #     docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
+      #     docker push $ECR_REGISTRY/$ECR_REPOSITORY:${IMAGE_TAG::7}
 
       - name: Update ECS task definition with new image
         run: |
-          IMAGE_TAG=$(echo $GITHUB_SHA | cut -c1-7)
+          TASK_DEFINITION_NAME=my-task-def
+          CONTAINER_NAME=my-container
+          NEW_IMAGE=590183744625.dkr.ecr.ap-south-1.amazonaws.com/my-repo:59afa66
 
-          # Get the latest task definition JSON
+          # Fetch the current task definition
           aws ecs describe-task-definition \
-            --task-definition my-task-def \
-            --query taskDefinition \
-            > task-def.json
+            --task-definition $TASK_DEFINITION_NAME \
+            --query "taskDefinition" > task-def.json
 
-          # Remove unwanted fields
-          jq 'del(.taskDefinitionArn, .revision, .status, .requiresAttributes, .compatibilities, .registeredAt, .registeredBy)' task-def.json > new-task-def.json
+          # Update the image in containerDefinitions
+          cat task-def.json | \
+            jq --arg IMAGE "$NEW_IMAGE" \
+              --arg NAME "$CONTAINER_NAME" \
+              '.containerDefinitions |= map(if .name == $NAME then .image = $IMAGE else . end)' \
+            > new-task-def.json
 
-          # Update only the image
-          jq --arg IMAGE "123456789012.dkr.ecr.ap-south-1.amazonaws.com/my-repo:$IMAGE_TAG" \
-            '.containerDefinitions[0].image = $IMAGE' new-task-def.json > final-task-def.json
+          # Register new revision
+          aws ecs register-task-definition \
+            --cli-input-json file://new-task-def.json \
+            --query "taskDefinition.taskDefinitionArn" --output text > new-task-def-arn.txt
 
-          # Register the new task definition
-          aws ecs register-task-definition --cli-input-json file://final-task-def.json
-
-          # Update the ECS service to use the new task definition
+          # Update service to use new revision
           aws ecs update-service \
             --cluster my-cluster \
             --service my-service \
-            --force-new-deployment
+            --task-definition $(cat new-task-def-arn.txt)
 
