--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,7 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
+      # (optional) build and push step if needed
       # - name: Build, tag, and push image to Amazon ECR
       #   env:
       #     ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
@@ -34,48 +35,51 @@ jobs:
       #     docker tag $ECR_REGISTRY/$ECR_REPOSITORY:latest $ECR_REGISTRY/$ECR_REPOSITORY:${IMAGE_TAG::7}
       #     docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
       #     docker push $ECR_REGISTRY/$ECR_REPOSITORY:${IMAGE_TAG::7}
+
       - name: Update ECS task definition with new image
         run: |
           IMAGE_TAG=$(echo $GITHUB_SHA | cut -c1-7)
           TASK_FAMILY="my-flask-app-task"
           CLUSTER_NAME="my-flask-app-cluster"
           SERVICE_NAME="my-flask-app-task-service-8mcd5ejj"
+          AWS_ACCOUNT_ID=${{ secrets.AWS_ACCOUNT_ID }}
+          AWS_REGION=${{ secrets.AWS_REGION }}
 
-          # Get current task definition, keeping only allowed fields
-          TASK_DEF=$(aws ecs describe-task-definition \
+          # Get current task definition
+          aws ecs describe-task-definition \
             --task-definition $TASK_FAMILY \
-            --query 'taskDefinition | {
-              family: family,
-              taskRoleArn: taskRoleArn,
-              executionRoleArn: executionRoleArn,
-              networkMode: networkMode,
-              containerDefinitions: containerDefinitions,
-              volumes: volumes,
-              placementConstraints: placementConstraints,
-              requiresCompatibilities: requiresCompatibilities,
-              cpu: cpu,
-              memory: memory,
-              ephemeralStorage: ephemeralStorage,
-              runtimePlatform: runtimePlatform
-            }')
+            --query 'taskDefinition' > task-def.json
 
-          # Replace only the Flask container image (assuming container[0] is Flask)
-          NEW_TASK_DEF=$(echo $TASK_DEF | jq \
-            --arg IMAGE "${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/my-flask-app:$IMAGE_TAG" \
-            '.containerDefinitions[0].image = $IMAGE')
+          # Strip out fields that cannot be re-registered
+          cat task-def.json | jq 'del(
+            .taskDefinitionArn,
+            .revision,
+            .status,
+            .requiresAttributes,
+            .compatibilities,
+            .registeredAt,
+            .registeredBy,
+            .inferenceAccelerators,
+            .proxyConfiguration,
+            .ephemeralStorage,
+            .runtimePlatform
+          )' > cleaned-task-def.json
 
-          # Save and register new task definition revision
-          echo "$NEW_TASK_DEF" > new-task-def.json
+          # Update only Flask container image (assumes container[0] is Flask app)
+          jq --arg IMAGE "$AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/my-flask-app:$IMAGE_TAG" \
+            '.containerDefinitions[0].image = $IMAGE' cleaned-task-def.json > new-task-def.json
+
+          # Register new task definition revision
           NEW_TASK_DEF_ARN=$(aws ecs register-task-definition \
             --cli-input-json file://new-task-def.json \
             --query 'taskDefinition.taskDefinitionArn' \
             --output text)
 
+          echo "New task definition: $NEW_TASK_DEF_ARN"
+
           # Update ECS service to use the new revision
           aws ecs update-service \
             --cluster $CLUSTER_NAME \
             --service $SERVICE_NAME \
-            --task-definition $NEW_TASK_DEF_ARN
-
-
-
+            --task-definition $NEW_TASK_DEF_ARN \
+            --force-new-deployment
