--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,7 +66,7 @@ jobs:
           )' > cleaned-task-def.json
 
           # Update only Flask container image (assumes container[0] is Flask app)
-          jq --arg IMAGE "$AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/my-flask-app:$IMAGE_TAG" \
+          jq --arg IMAGE "$AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/my-repo:lastest" \
             '.containerDefinitions[0].image = $IMAGE' cleaned-task-def.json > new-task-def.json
 
           # Register new task definition revision
